--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -192,3 +192,14 @@ video{
     }
   }
 
+  .header {
+    color: #5f4a4a;
+    font-size: 27px;
+    padding: 10px;
+}
+
+.bigicon {
+    font-size: 35px;
+    color: #5f4a4a;
+}
+
